# sprite-generator

./: .gitignore  README.md  item-metadata.json  item_metadata_list.csv  item_names.py  item_selector.py  main.py  playwright_wrapper.py  pyproject.toml  spriter.py
scripts/: crop_tiles.bash
src/spriter/: __main__.py  classified_items.csv  config.json  playwright_wrapper.py
