[project]
name = "sprite-generator"
version = "0.1.0"
description = "Sprite generator using item selector + playwright downloader"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "playwright"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.csv"]

[project.scripts]
sprite-gen = "main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"